اپلود روز جمعه htmls

--- a/index -rahkar.html
+++ b/index -rahkar.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>آتش در سکوت</title>
+	<meta name="keywords"
+		content="آتش در سکوت ، سوخت فسیلی ، مراحل تشکیل سوخت فسیلی ، نفت ، زغال سنگ ، گاز طبیعی ، فرآیند دیاژنز ، کروژن ، دفن رسوبات
+		انرژی تجدیدناپذیر ، زمان زمین شناسی  ، چند دقیقه با زمین ، فشار و دما ، زیست توده ">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/all.min.css" rel="stylesheet">
 	<link href="assets/css/theme.css" rel="stylesheet">
-	<link href="assets/css/oghat.css" rel="stylesheet">
+	<link href="assets/css/oghat1.css" rel="stylesheet">
 	<link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet">
     <style>
        
@@ -363,7 +366,7 @@
                             <a class="nav-link" aria-current="page" href="index.html">سوخت های فسیلی</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index -chand-dahgihge-ba-zamin.html">چند دقیقه با زمین</a>
+                            <a class="nav-link" href="index_chand_dahgihge_ba_zamin.html">چند دقیقه با زمین</a>
                         </li>
 
                         <li class="nav-item">
@@ -575,7 +578,7 @@
 							<a class="nav-link" aria-current="page" href="index.html">سوخت های فسیلی</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index -chand-dahgihge-ba-zamin.html">چند دقیقه با زمین</a>
+							<a class="nav-link" href="index_chand_dahgihge_ba_zamin.html">چند دقیقه با زمین</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="index -rahkar.html">   راهکار ها</a>
