Update index -chand-dahgihge-ba-zamin.html. Cards width change to 100%

--- a/index -chand-dahgihge-ba-zamin.html
+++ b/index -chand-dahgihge-ba-zamin.html
@@ -86,7 +86,7 @@ body {
             flex-wrap: wrap;
             gap: 20px;
             justify-content: center;
-            width: 1116px;
+            width: 100%;
         }
         .card-mov{
             background-color: #ffffff;
@@ -711,5 +711,6 @@ flex-direction: column;
 
 
 </body>
+
 
 </html>
