--- a/darbarema.html
+++ b/darbarema.html
@@ -408,11 +408,11 @@ input[type="radio"]:checked + .option-circle {
                 <div class="col-12 text-center d-flex justify-content-center align-items-center flex-column"
                     id="content-header">
                     
-                    <h1 class="text-white w-50 mx-auto title-border" id="title-head">درباره ما</h1>
-                    <p class="text-secondary w-50 mx-auto mt-5">
+                    <h1 class="text-white  mx-auto title-border" id="title-head">درباره ما</h1>
+                    <p class="text-secondary  mx-auto mt-5">
                         پروژه دانش آموزی درباره سوخت های فسیلی و آینده انرژی جهان
                     </p>
-                    <p class="text-secondary w-50 mx-auto mt-5">
+                    <p class="text-secondary  mx-auto mt-5">
                         کُلُوا وَ اشْرَبُوا وَ لا تُسْرِفُوا إِنّهُ لا یُحِبّ الْمُسْرِفینَ (سوره اعراف / آیه 31 )
                         <br>
                         بخورید و بیاشامید ولی اسراف نکنید زیرا خداوند مسرفان را دوست ندارد.
@@ -784,4 +784,5 @@ function resetForm() {
 }
     </script>
 </body>
+
 </html>
