--- a/index.html
+++ b/index.html
@@ -379,11 +379,12 @@
 		}
 
 		.map-button {
-			width: 100px;
+			width: 220px;
 			height: 40px;
 			background-color: #38bdf8;
 			border: none;
 			border-radius: 10px;
+			padding:2px 8px;
 		}
 
 		.map-button a {
@@ -797,7 +798,7 @@
 				</p>
 			</div>
 
-			<button class="map-button"><img src="assets/img/location dot-64.png" alt="" width="50px"><a
+			<button class="map-button"><img src="assets/img/location dot-64.png" alt="" width="20px"><a
 					href="map.html">گنجینه های جهان</a></button>
 					<script>
 						const mapBtn = document.querySelector('.map-button');
@@ -1118,4 +1119,5 @@
 
 
 </html>
+
 
