tag br در عنوان اضاف کردم

--- a/darbarema.html
+++ b/darbarema.html
@@ -418,7 +418,7 @@ input[type="radio"]:checked + .option-circle {
                         بخورید و بیاشامید ولی اسراف نکنید زیرا خداوند مسرفان را دوست ندارد.
                         <br>
                         <br>
-                        با اسراف، سرمایه محبت الهی که نعمتی بزرگ است، از دست انسان می‌رود. و می‌شود گفت هر کس این نعمت
+                        با اسراف، سرمایه محبت الهی که نعمتی بزرگ است، از دست انسان می‌رود. و<br> می‌شود گفت هر کس این نعمت
                         را از دست دهد، گرفتار عذاب می‌شود.
                     </p>
                     <div id="test" class="text-white">
@@ -786,4 +786,5 @@ function resetForm() {
 </body>
 
 </html>
+
 
